feat: Get peripheral devices, restart peripheral device
