# packages/openapi/api/definitions/devices.yaml
@@ -66,7 +66,17 @@ resources:
                         description: Service messages from the device.
                       deviceType:
                         type: string
-                        enum: ['mos', 'spreadsheet', 'inews', 'playout', 'package_manager', 'live_status']
+                        enum:
+                          [
+                            'unknown',
+                            'mos',
+                            'spreadsheet',
+                            'inews',
+                            'playout',
+                            'media_manager',
+                            'package_manager',
+                            'live_status',
+                          ]
                         description: Device type.
                       connected:
                         type: boolean
